--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>org.wildfly.swarm</groupId>
                 <artifactId>bom</artifactId>
@@ -73,6 +74,13 @@
     </dependencyManagement>
 
     <dependencies>
+            <dependency>
+                      <groupId>junit</groupId>
+                            <artifactId>junit</artifactId>
+                                  <version>4.5</version>
+                                        <scope>test</scope>
+                                            </dependency>
+
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet-core</artifactId>
